--- a/Feature_detection.ipynb
+++ b/Feature_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,15 +98,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "def image_conv(image):\n",
     "    global i_start, i_end, j_start, j_end\n",
     "    i_start = 1\n",
-    "    j_start = 2\n",
-    "    j_end = -1\n",
+    "    j_start = 1\n",
+    "    j_end = -2\n",
     "    g = fits.getdata(image)\n",
     "    # g[g < 0] = 0\n",
     "    s = g[i_start:-1, j_start:j_end]\n",
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,87 +272,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20051013\n",
-      "cor1_st_2455782773_b_reg_\n",
-      "cor1_st_2455786613_v_reg_\n",
-      "cor1_st_2455790502_w_reg_\n",
-      "cor1_st_2455794390_p_reg_\n",
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "cor1_st_2456105349_b_reg_\n",
-      "cor1_st_2456109221_v_reg_\n",
-      "cor1_st_2456113110_w_reg_\n",
-      "cor1_st_2456116950_p_reg_\n",
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "cor1_st_2456804222_b_reg_\n",
-      "cor1_st_2456808094_v_reg_\n",
-      "cor1_st_2456811983_w_reg_\n",
-      "cor1_st_2456815840_p_reg_\n",
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "cor1_st_2457157533_b_reg_\n",
-      "cor1_st_2457161422_v_reg_\n",
-      "cor1_st_2457165278_w_reg_\n",
-      "cor1_st_2457169150_p_reg_\n",
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "cor1_st_2457506969_b_reg_\n",
-      "cor1_st_2457510874_v_reg_\n",
-      "cor1_st_2457514731_w_reg_\n",
-      "cor1_st_2457518587_p_reg_\n",
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "cor2_st_2455759994_b_reg_\n",
-      "cor2_st_2455763851_v_reg_\n",
-      "cor2_st_2455767707_w_reg_\n",
-      "cor2_st_2455771580_p_reg_\n",
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "cor2_st_2458520717_b_reg_\n",
-      "cor2_st_2458521713_v_reg_\n",
-      "cor2_st_2458522710_w_reg_\n",
-      "cor2_st_2458523691_p_reg_\n"
+      "20051019\n",
+      "cor2_st_2473318931_b_reg_\n",
+      "cor2_st_2473320908_v_reg_\n",
+      "cor2_st_2473324765_w_reg_\n",
+      "cor2_st_2473328638_p_reg_\n",
+      "0\n"
      ]
     },
     {
      "ename": "error",
-     "evalue": "OpenCV(4.6.0) /private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_11nitadzeg/croot/opencv-suite_1691620374638/work/modules/imgcodecs/src/loadsave.cpp:801: error: (-215:Assertion failed) !_img.empty() in function 'imwrite'\n",
+     "evalue": "OpenCV(4.6.0) /private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_11nitadzeg/croot/opencv-suite_1691620374638/work/modules/calib3d/src/ptsetreg.cpp:176: error: (-215:Assertion failed) count >= 0 && count2 == count in function 'run'\n",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
       "\u001b[1;32m/Users/m5261113/Documents/after_graduate2/preprocess/Feature_detection.ipynb セル 12\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/m5261113/Documents/after_graduate2/preprocess/Feature_detection.ipynb#X14sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m image_batches \u001b[39m=\u001b[39m split_images(image_files, batch_size)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/m5261113/Documents/after_graduate2/preprocess/Feature_detection.ipynb#X14sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mfor\u001b[39;00m i, images \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(image_batches):\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/m5261113/Documents/after_graduate2/preprocess/Feature_detection.ipynb#X14sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     image_registration(images)\n",
-      "\u001b[1;32m/Users/m5261113/Documents/after_graduate2/preprocess/Feature_detection.ipynb セル 12\u001b[0m line \u001b[0;36m8\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/m5261113/Documents/after_graduate2/preprocess/Feature_detection.ipynb#X14sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m t \u001b[39m=\u001b[39m []\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/m5261113/Documents/after_graduate2/preprocess/Feature_detection.ipynb#X14sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m images \u001b[39m=\u001b[39m []\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/m5261113/Documents/after_graduate2/preprocess/Feature_detection.ipynb#X14sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m images_uint16, t, images \u001b[39m=\u001b[39m make_base_images(image_files)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/m5261113/Documents/after_graduate2/preprocess/Feature_detection.ipynb#X14sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m home_dir \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mexpanduser(\u001b[39m\"\u001b[39m\u001b[39m~\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/m5261113/Documents/after_graduate2/preprocess/Feature_detection.ipynb#X14sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m output_directory \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(home_dir, \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mDocuments/after_graduate2/output_preprocess/\u001b[39m\u001b[39m{\u001b[39;00mtarget_directory\u001b[39m}\u001b[39;00m\u001b[39m/registration/\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;32m/Users/m5261113/Documents/after_graduate2/preprocess/Feature_detection.ipynb セル 12\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/m5261113/Documents/after_graduate2/preprocess/Feature_detection.ipynb#X14sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m t \u001b[39m=\u001b[39m []\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/m5261113/Documents/after_graduate2/preprocess/Feature_detection.ipynb#X14sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39mfor\u001b[39;00m i,filename \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(image_files):\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/m5261113/Documents/after_graduate2/preprocess/Feature_detection.ipynb#X14sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m     images_uint16\u001b[39m.\u001b[39mappend(image_conv(filename))\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/m5261113/Documents/after_graduate2/preprocess/Feature_detection.ipynb#X14sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m     f\u001b[39m.\u001b[39mappend(fits\u001b[39m.\u001b[39mgetdata(filename)[i_start:, j_start:j_end])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/m5261113/Documents/after_graduate2/preprocess/Feature_detection.ipynb#X14sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m     hdu \u001b[39m=\u001b[39m fits\u001b[39m.\u001b[39mopen(filename)[\u001b[39m0\u001b[39m]\n",
-      "\u001b[1;32m/Users/m5261113/Documents/after_graduate2/preprocess/Feature_detection.ipynb セル 12\u001b[0m line \u001b[0;36m9\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/m5261113/Documents/after_graduate2/preprocess/Feature_detection.ipynb#X14sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m# g[g < 0] = 0\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/m5261113/Documents/after_graduate2/preprocess/Feature_detection.ipynb#X14sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m s \u001b[39m=\u001b[39m g[i_start:, j_start:j_end]\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/m5261113/Documents/after_graduate2/preprocess/Feature_detection.ipynb#X14sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m cv2\u001b[39m.\u001b[39mimwrite(\u001b[39m\"\u001b[39m\u001b[39mtest.tif\u001b[39m\u001b[39m\"\u001b[39m,s\u001b[39m.\u001b[39mastype(\u001b[39m'\u001b[39m\u001b[39muint16\u001b[39m\u001b[39m'\u001b[39m))\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/m5261113/Documents/after_graduate2/preprocess/Feature_detection.ipynb#X14sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m c \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mimread(\u001b[39m\"\u001b[39m\u001b[39mtest.tif\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/m5261113/Documents/after_graduate2/preprocess/Feature_detection.ipynb#X14sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mreturn\u001b[39;00m c\n",
-      "\u001b[0;31merror\u001b[0m: OpenCV(4.6.0) /private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_11nitadzeg/croot/opencv-suite_1691620374638/work/modules/imgcodecs/src/loadsave.cpp:801: error: (-215:Assertion failed) !_img.empty() in function 'imwrite'\n"
+      "\u001b[1;32m/Users/m5261113/Documents/after_graduate2/preprocess/Feature_detection.ipynb セル 12\u001b[0m line \u001b[0;36m3\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/m5261113/Documents/after_graduate2/preprocess/Feature_detection.ipynb#X14sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m src_pts \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mfloat32([keypoints2[m[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mqueryIdx]\u001b[39m.\u001b[39mpt \u001b[39mfor\u001b[39;00m m \u001b[39min\u001b[39;00m good_matches])\u001b[39m.\u001b[39mreshape(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/m5261113/Documents/after_graduate2/preprocess/Feature_detection.ipynb#X14sZmlsZQ%3D%3D?line=37'>38</a>\u001b[0m dst_pts \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mfloat32([keypoints1[m[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mtrainIdx]\u001b[39m.\u001b[39mpt \u001b[39mfor\u001b[39;00m m \u001b[39min\u001b[39;00m good_matches])\u001b[39m.\u001b[39mreshape(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/m5261113/Documents/after_graduate2/preprocess/Feature_detection.ipynb#X14sZmlsZQ%3D%3D?line=38'>39</a>\u001b[0m M, inliers \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mestimateAffine2D(src_pts, dst_pts)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/m5261113/Documents/after_graduate2/preprocess/Feature_detection.ipynb#X14sZmlsZQ%3D%3D?line=40'>41</a>\u001b[0m \u001b[39m# 変換行列を適用して画像を基準画像の座標系に変換\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/m5261113/Documents/after_graduate2/preprocess/Feature_detection.ipynb#X14sZmlsZQ%3D%3D?line=41'>42</a>\u001b[0m \u001b[39m# if i == 3:\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/m5261113/Documents/after_graduate2/preprocess/Feature_detection.ipynb#X14sZmlsZQ%3D%3D?line=42'>43</a>\u001b[0m \u001b[39m#     print(src_pts, dst_pts)\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/m5261113/Documents/after_graduate2/preprocess/Feature_detection.ipynb#X14sZmlsZQ%3D%3D?line=43'>44</a>\u001b[0m \u001b[39m# print(M.dtype)\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/m5261113/Documents/after_graduate2/preprocess/Feature_detection.ipynb#X14sZmlsZQ%3D%3D?line=44'>45</a>\u001b[0m registered_image \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mwarpAffine(images_uint16[i], M, (reference_image\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m], reference_image\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]), flags\u001b[39m=\u001b[39mcv2\u001b[39m.\u001b[39mINTER_NEAREST)\n",
+      "\u001b[0;31merror\u001b[0m: OpenCV(4.6.0) /private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_11nitadzeg/croot/opencv-suite_1691620374638/work/modules/calib3d/src/ptsetreg.cpp:176: error: (-215:Assertion failed) count >= 0 && count2 == count in function 'run'\n"
      ]
     }
    ],
    "source": [
     "base_directory = f\"../output_preprocess/\"\n",
     "for directory in sorted(os.listdir(base_directory), key = natural_keys):\n",
-    "    if(\"20051\" in directory):\n",
+    "    if(\"20051019\" in directory):\n",
     "        print(directory)\n",
     "        image_dir = f\"../output_preprocess/{directory}/scattered_correction/\"\n",
     "        image_files = sorted(glob.glob(os.path.join(image_dir, \"*.fit\")), key = natural_keys)\n",
@@ -366,18 +317,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[['../output_preprocess/20050925/scattered_correction/cor2_st_2406717897_b.fit', '../output_preprocess/20050925/scattered_correction/cor2_st_2406727508_v.fit', '../output_preprocess/20050925/scattered_correction/cor2_st_2406737168_w.fit', '../output_preprocess/20050925/scattered_correction/cor2_st_2406766067_p.fit'], ['../output_preprocess/20050925/scattered_correction/cor2_st_2407409109_b.fit', '../output_preprocess/20050925/scattered_correction/cor2_st_2407418769_v.fit', '../output_preprocess/20050925/scattered_correction/cor2_st_2407428397_w.fit', '../output_preprocess/20050925/scattered_correction/cor2_st_2407457296_p.fit']]\n",
+      "0\n",
+      "1\n",
+      "2\n",
       "3\n",
-      "cor1_st_2572086065_b_reg_\n",
-      "cor1_st_2572727016_v_reg_\n",
-      "cor1_st_2572732931_w_reg_\n",
-      "cor1_st_2572739419_p_reg_\n",
+      "cor2_st_2407409109_b_reg_\n",
+      "cor2_st_2407418769_v_reg_\n",
+      "cor2_st_2407428397_w_reg_\n",
+      "cor2_st_2407457296_p_reg_\n",
       "0\n",
       "1\n",
       "2\n",
@@ -386,22 +341,23 @@
     }
    ],
    "source": [
-    "target_dir = \"20051119\"\n",
+    "target_dir = \"20050925\"\n",
     "image_dir = f\"../output_preprocess/{target_dir}/scattered_correction/\"\n",
     "image_files = sorted(glob.glob(os.path.join(image_dir, \"*.fit\")))\n",
     "\n",
     "batch_size = 4\n",
     "global i_start, i_end, j_start, j_end\n",
     "i_start = 1\n",
-    "j_start = 2\n",
-    "j_end = -1\n",
+    "j_start = 60\n",
+    "j_end = -2\n",
     "image_batches = split_images(image_files, batch_size)\n",
-    "print(len(image_batches))\n",
-    "for i, file in enumerate(image_batches[2]):\n",
+    "print(image_batches)\n",
+    "for i, file in enumerate(image_batches[0]):\n",
+    "    print(i)\n",
     "    a = fits.getdata(file)\n",
     "    fits.writeto(f\"{i}.fits\", a[i_start:-1, j_start:j_end], overwrite = True)\n",
     "    if i == 3:\n",
-    "        image_registration(image_batches[2])"
+    "        image_registration(image_batches[1])"
    ]
   },
   {
