--- a/test.ipynb
+++ b/test.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,6 +216,10 @@
     "    num_bin = header[\"BINNING\"]\n",
     "    num_sub_images = header[\"NSUBIMG\"]\n",
     "    global pre_filt\n",
+    "    try:\n",
+    "        pre_filt\n",
+    "    except NameError:\n",
+    "        pre_filt=1\n",
     "    if((filt == \"b\") or (filt == \"w\") or (filt == \"p\")) or ( filt == \"v\" and pre_filt == \"b\"):\n",
     "    # if((filt == \"b\") or (filt == \"w\") or (filt == \"p\")) or ( filt == \"v\" and (not pre_filt == \"p\")):\n",
     "        if(num_sub_images == 1):\n",
@@ -267,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -275,70 +279,32 @@
      "output_type": "stream",
      "text": [
       "['20050928', '20050917', '20050921', '20050919', '20050918', '20051005', '20050920', '20050929', '20051016', '20051011', '20051018', '20050904', '20051019', '20050903', '20051010', '20051017', '20051119', '20050914', '20051009', '20050925', '20050922', '20051006', '20050923', '20050924', '20051008', '20051030', '20050908', '20050906', '20051023', '20051024', '20051025', '20051022', '20051014', '20051013', '20050909', '20051103', '20051104', '20050829']\n",
-      "['20051014']\n",
+      "['20051019']\n",
       "['../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2332479491_v.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2332498721_wide.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2332786728_wide.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2332825189_v.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2333933003_v.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2333935192_p.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2333937365_x.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2333939669_w.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2333941809_b.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2333943950_v.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2333946008_p.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2333948132_x.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2333950223_w.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2333953001_b.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2333955746_v.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2333966529_v.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2334384682_p.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2334386774_x.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2334388930_w.fit', '../HAY_A_AMICA_3_HAYAMICA_V1_0/data/20050829/st_2334391087_b.fit']\n",
-      "20051014\n",
-      "st_2458555574_b.fit  start\n",
-      "st_2458555574_b.fit  done\n",
-      "st_2458559479_v.fit  start\n",
-      "st_2458559479_v.fit  done\n",
-      "st_2458563336_w.fit  start\n",
-      "st_2458563336_w.fit  done\n",
-      "st_2458567192_p.fit  start\n",
-      "st_2458567192_p.fit  done\n",
-      "st_2458574873_v.fit  start\n",
-      "st_2458908623_b.fit  start\n",
-      "st_2458908623_b.fit  done\n",
-      "st_2458912495_v.fit  start\n",
-      "st_2458912495_v.fit  done\n",
-      "st_2458916352_w.fit  start\n",
-      "st_2458916352_w.fit  done\n",
-      "st_2458920240_p.fit  start\n",
-      "st_2458920240_p.fit  done\n",
-      "st_2458929180_v.fit  start\n",
-      "st_2459258061_b.fit  start\n",
-      "st_2459258061_b.fit  done\n",
-      "st_2459261933_v.fit  start\n",
-      "st_2459261933_v.fit  done\n",
-      "st_2459265790_w.fit  start\n",
-      "st_2459265790_w.fit  done\n",
-      "st_2459269679_p.fit  start\n",
-      "st_2459269679_p.fit  done\n",
-      "st_2459278619_v.fit  start\n",
-      "st_2459607516_b.fit  start\n",
-      "st_2459607516_b.fit  done\n",
-      "st_2459611372_v.fit  start\n",
-      "st_2459611372_v.fit  done\n",
-      "st_2459615228_w.fit  start\n",
-      "st_2459615228_w.fit  done\n",
-      "st_2459619117_p.fit  start\n",
-      "st_2459619117_p.fit  done\n",
-      "st_2459628057_v.fit  start\n",
-      "st_2460306420_b.fit  start\n",
-      "st_2460306420_b.fit  done\n",
-      "st_2460310260_v.fit  start\n",
-      "st_2460310260_v.fit  done\n",
-      "st_2460314149_w.fit  start\n",
-      "st_2460314149_w.fit  done\n",
-      "st_2460318038_p.fit  start\n",
-      "st_2460318038_p.fit  done\n",
-      "st_2460326962_v.fit  start\n",
-      "st_2461583123_v.fit  start\n",
-      "st_2461583123_v.fit  done\n",
-      "st_2461585051_b.fit  start\n",
-      "st_2461585051_b.fit  done\n",
-      "st_2461587011_w.fit  start\n",
-      "st_2461587011_w.fit  done\n",
-      "st_2461588972_p.fit  start\n",
-      "st_2461588972_p.fit  done\n",
-      "st_2461590917_b.fit  start\n",
-      "st_2461590917_b.fit  done\n",
-      "st_2461592861_v.fit  start\n",
-      "st_2461592861_v.fit  done\n",
-      "st_2461594838_w.fit  start\n",
-      "st_2461594838_w.fit  done\n",
-      "st_2461596766_p.fit  start\n",
-      "st_2461596766_p.fit  done\n"
+      "20051019\n",
+      "st_2472657784_v.fit  start\n",
+      "st_2472776818_v.fit  start\n",
+      "st_2473314486_v.fit  start\n",
+      "st_2473318931_b.fit  start\n",
+      "st_2473318931_b.fit  done\n",
+      "st_2473320908_v.fit  start\n",
+      "st_2473320908_v.fit  done\n",
+      "st_2473324765_w.fit  start\n",
+      "st_2473324765_w.fit  done\n",
+      "st_2473328638_p.fit  start\n",
+      "st_2473328638_p.fit  done\n",
+      "st_2473604354_v.fit  start\n",
+      "st_2473608423_b.fit  start\n",
+      "st_2473608423_b.fit  done\n",
+      "st_2473610825_v.fit  start\n",
+      "st_2473610825_v.fit  done\n",
+      "st_2473614681_w.fit  start\n",
+      "st_2473614681_w.fit  done\n",
+      "st_2473618554_p.fit  start\n",
+      "st_2473618554_p.fit  done\n",
+      "st_2474385791_v.fit  start\n",
+      "st_2474500986_v.fit  start\n",
+      "st_2474616313_v.fit  start\n"
      ]
     }
    ],
@@ -374,7 +340,7 @@
     "                directory_list.append(directory)\n",
     "\n",
     "print(directory_list)\n",
-    "need = sorted([item for item in directory_list if \"20051\" in item], key = natural_keys)\n",
+    "need = sorted([item for item in directory_list if \"20051019\" in item], key = natural_keys)\n",
     "print(need)\n",
     "for subdir in directory_list:\n",
     "    image_files = sorted(glob.glob(os.path.join(base_directory, subdir, '*.fit')), key = natural_keys)\n",
